Archer_C7_V5/openwrt/build_dir/host/coccinelle-coccinelle-1.0.0-rc21/parsing_c/parser_c.output
   0  $accept : %entry% $end

   1  main : translation_unit EOF

   2  translation_unit :
   3                   | translation_unit external_declaration
   4                   | translation_unit Tnamespace TIdent TOBrace translation_unit TCBrace

   5  ident : TIdent
   6        | TypedefIdent

   7  identifier : TIdent

   8  identifier_cpp : TIdent
   9                 | ident_extra_cpp

  10  ident_cpp : TIdent
  11            | TypedefIdent
  12            | ident_extra_cpp

  13  ident_extra_cpp : TIdent TCppConcatOp identifier_cpp_list
  14                  | TCppConcatOp TIdent
  15                  | TMacroIdentBuilder TOPar param_define_list TCPar

  16  identifier_cpp_list : TIdent
  17                      | identifier_cpp_list TCppConcatOp TIdent

  18  expr : assign_expr
  19       | expr TComma assign_expr

  20  assign_expr : cond_expr
  21              | cast_expr TAssign assign_expr
  22              | cast_expr TEq assign_expr

  23  cond_expr : arith_expr
  24            | arith_expr TWhy gcc_opt_expr TDotDot assign_expr

  25  arith_expr : cast_expr
  26             | arith_expr TMul arith_expr
  27             | arith_expr TDiv arith_expr
  28             | arith_expr TMin arith_expr
  29             | arith_expr TMax arith_expr
  30             | arith_expr TMod arith_expr
  31             | arith_expr TPlus arith_expr
  32             | arith_expr TMinus arith_expr
  33             | arith_expr TShl arith_expr
  34             | arith_expr TShr arith_expr
  35             | arith_expr TInf arith_expr
  36             | arith_expr TSup arith_expr
  37             | arith_expr TInfEq arith_expr
  38             | arith_expr TSupEq arith_expr
  39             | arith_expr TEqEq arith_expr
  40             | arith_expr TNotEq arith_expr
  41             | arith_expr TAnd arith_expr
  42             | arith_expr TOr arith_expr
  43             | arith_expr TXor arith_expr
  44             | arith_expr TAndLog arith_expr
  45             | arith_expr TOrLog arith_expr

  46  cast_expr : unary_expr
  47            | topar2 type_name tcpar2 cast_expr

  48  unary_expr : postfix_expr
  49             | TInc unary_expr
  50             | TDec unary_expr
  51             | unary_op cast_expr
  52             | Tsizeof unary_expr
  53             | Tsizeof topar2 type_name tcpar2
  54             | Tnew new_argument
  55             | Tnew TOPar argument_list_ne TCPar new_argument
  56             | Tdelete cast_expr

  57  new_argument : TIdent TOPar argument_list_ne TCPar
  58               | TIdent TOPar TCPar
  59               | TypedefIdent TOPar argument_list_ne TCPar
  60               | TypedefIdent TOPar TCPar
  61               | type_spec
  62               | new_argument TOCro expr TCCro

  63  unary_op : TAnd
  64           | TMul
  65           | TPlus
  66           | TMinus
  67           | TTilde
  68           | TBang
  69           | TAndLog

  70  postfix_expr : primary_expr
  71               | postfix_expr TOCro expr TCCro
  72               | postfix_expr TOPar argument_list_ne TCPar
  73               | postfix_expr TOPar TCPar
  74               | postfix_expr TDot ident_cpp
  75               | postfix_expr TPtrOp ident_cpp
  76               | postfix_expr TInc
  77               | postfix_expr TDec
  78               | topar2 type_name tcpar2 TOBrace TCBrace
  79               | topar2 type_name tcpar2 TOBrace initialize_list gcc_comma_opt TCBrace

  80  primary_expr : identifier_cpp
  81               | TInt
  82               | TFloat
  83               | TString
  84               | TQuote string_fragments TQuote
  85               | TChar
  86               | TDecimal
  87               | TOPar expr TCPar
  88               | TMacroString
  89               | string_elem string_list
  90               | TOPar compound TCPar

  91  string_fragments :
  92                   | string_fragment string_fragments

  93  string_fragment : TPct string_format
  94                  | TSubString

  95  string_format : TFormat

  96  argument_ne : assign_expr
  97              | parameter_decl
  98              | action_higherordermacro_ne

  99  argument : assign_expr
 100           | parameter_decl
 101           | action_higherordermacro

 102  action_higherordermacro_ne : taction_list_ne

 103  action_higherordermacro : taction_list

 104  const_expr : cond_expr

 105  topar2 : TOPar

 106  tcpar2 : TCPar

 107  statement : statement2

 108  statement2 : labeled
 109             | compound
 110             | expr_statement
 111             | selection
 112             | iteration
 113             | jump TPtVirg
 114             | Tasm TOPar asmbody TCPar TPtVirg
 115             | Tasm Tvolatile TOPar asmbody TCPar TPtVirg
 116             | TMacroStmt
 117             | Texec identifier exec_list TPtVirg

 118  labeled : ident_cpp TDotDot sw_stat_or_decl
 119          | Tcase const_expr TDotDot sw_stat_or_decl
 120          | Tcase const_expr TEllipsis const_expr TDotDot sw_stat_or_decl
 121          | Tdefault TDotDot sw_stat_or_decl

 122  sw_stat_or_decl : decl
 123                  | statement

 124  end_labeled : ident_cpp TDotDot
 125              | Tcase const_expr TDotDot
 126              | Tdefault TDotDot

 127  compound : tobrace compound2 tcbrace

 128  compound2 :
 129            | stat_or_decl_list

 130  stat_or_decl_list : stat_or_decl
 131                    | end_labeled
 132                    | stat_or_decl stat_or_decl_list

 133  stat_or_decl : decl
 134               | statement
 135               | function_definition
 136               | cpp_directive
 137               | cpp_ifdef_directive

 138  expr_statement : TPtVirg
 139                 | expr TPtVirg

 140  selection : Tif TOPar expr TCPar statement
 141            | Tif TOPar expr TCPar statement Telse statement
 142            | Tswitch TOPar expr TCPar statement

 143  iteration : Twhile TOPar expr TCPar statement
 144            | Tdo statement Twhile TOPar expr TCPar TPtVirg
 145            | Tfor TOPar expr_statement expr_statement TCPar statement
 146            | Tfor TOPar expr_statement expr_statement expr TCPar statement
 147            | Tfor TOPar decl expr_statement TCPar statement
 148            | Tfor TOPar decl expr_statement expr TCPar statement
 149            | TMacroIterator TOPar argument_list_ne TCPar statement
 150            | TMacroIterator TOPar TCPar statement

 151  jump : Tgoto ident_cpp
 152       | Tcontinue
 153       | Tbreak
 154       | Treturn
 155       | Treturn expr
 156       | Tgoto TMul expr

 157  string_elem : TString
 158              | TMacroString

 159  asmbody : string_list colon_asm_list
 160          | string_list

 161  colon_asm : TDotDot colon_option_list

 162  colon_option : TString
 163               | TString TOPar asm_expr TCPar
 164               | TOCro identifier TCCro TString TOPar asm_expr TCPar
 165               | identifier
 166               |

 167  exec_list :
 168            | TDotDot identifier_cpp exec_ident exec_list
 169            | TIdent exec_ident2 exec_list
 170            | token exec_list

 171  exec_ident :
 172             | TDot TIdent exec_ident
 173             | TPtrOp TIdent exec_ident
 174             | TOCro expr TCCro exec_ident

 175  exec_ident2 :
 176              | TDot TIdent exec_ident2

 177  asm_expr : assign_expr

 178  token : TPlus
 179        | TMinus
 180        | TMul
 181        | TDiv
 182        | TMod
 183        | TMin
 184        | TMax
 185        | TInc
 186        | TDec
 187        | TEq
 188        | TAssign
 189        | TEqEq
 190        | TNotEq
 191        | TSupEq
 192        | TInfEq
 193        | TSup
 194        | TInf
 195        | TAndLog
 196        | TOrLog
 197        | TShr
 198        | TShl
 199        | TAnd
 200        | TOr
 201        | TXor
 202        | TOBrace
 203        | TCBrace
 204        | TOPar
 205        | TCPar
 206        | TWhy
 207        | TBang
 208        | TComma
 209        | TypedefIdent
 210        | Tif
 211        | Telse

 212  type_spec2 : Tvoid
 213             | Tchar
 214             | Tint
 215             | Tfloat
 216             | Tdouble
 217             | Tsize_t
 218             | Tssize_t
 219             | Tptrdiff_t
 220             | Tshort
 221             | Tlong
 222             | Tsigned
 223             | Tunsigned
 224             | struct_or_union_spec
 225             | enum_spec
 226             | Tdecimal TOPar const_expr TComma const_expr TCPar
 227             | Tdecimal TOPar const_expr TCPar
 228             | TypedefIdent
 229             | Ttypeof TOPar assign_expr TCPar
 230             | Ttypeof TOPar type_name TCPar

 231  type_spec : type_spec2

 232  type_qualif : Tconst
 233              | Tvolatile
 234              | Trestrict

 235  attribute : Tattribute TOPar TCPar
 236            | TMacroAttr

 237  attribute_storage : TMacroAttrStorage

 238  type_qualif_attr : type_qualif
 239                   | TMacroAttr

 240  declarator : pointer direct_d
 241             | direct_d

 242  pointer : tmul
 243          | tmul pointer
 244          | tmul type_qualif_list
 245          | tmul type_qualif_list pointer

 246  tmul : TMul
 247       | TAnd

 248  direct_d : identifier_cpp
 249           | TOPar declarator TCPar
 250           | direct_d tocro tccro
 251           | direct_d tocro const_expr tccro
 252           | direct_d topar tcpar
 253           | direct_d topar parameter_type_list tcpar

 254  tocro : TOCro

 255  tccro : TCCro

 256  abstract_declarator : pointer
 257                      | direct_abstract_declarator
 258                      | pointer direct_abstract_declarator

 259  direct_abstract_declarator : TOPar abstract_declarator TCPar
 260                             | TOCro TCCro
 261                             | TOCro const_expr TCCro
 262                             | direct_abstract_declarator TOCro TCCro
 263                             | direct_abstract_declarator TOCro const_expr TCCro
 264                             | TOPar TCPar
 265                             | topar parameter_type_list tcpar
 266                             | direct_abstract_declarator topar tcpar
 267                             | direct_abstract_declarator topar parameter_type_list tcpar

 268  parameter_type_list : parameter_list
 269                      | parameter_list TComma TEllipsis

 270  parameter_decl2 : TKRParam
 271                  | decl_spec declaratorp
 272                  | decl_spec abstract_declaratorp
 273                  | decl_spec

 274  parameter_decl : parameter_decl2
 275                 | attributes parameter_decl2

 276  declaratorp : declarator
 277              | attributes declarator
 278              | declarator attributes

 279  abstract_declaratorp : abstract_declarator
 280                       | attributes abstract_declarator

 281  spec_qualif_list2 : type_spec
 282                    | type_qualif
 283                    | type_spec spec_qualif_list
 284                    | type_qualif spec_qualif_list

 285  spec_qualif_list : spec_qualif_list2

 286  type_qualif_list : type_qualif_attr
 287                   | type_qualif_list type_qualif_attr

 288  type_name : spec_qualif_list
 289            | spec_qualif_list abstract_declaratort

 290  abstract_declaratort : abstract_declarator
 291                       | attributes abstract_declarator

 292  decl2 : decl_spec TPtVirg
 293        | decl_spec init_declarator_list TPtVirg
 294        | TMacroDecl TOPar argument_list TCPar TPtVirg
 295        | Tstatic TMacroDecl TOPar argument_list TCPar TPtVirg
 296        | Tstatic TMacroDeclConst TMacroDecl TOPar argument_list TCPar TPtVirg
 297        | TMacroDecl TOPar argument_list TCPar teq initialize TPtVirg
 298        | Tstatic TMacroDecl TOPar argument_list TCPar teq initialize TPtVirg
 299        | Tstatic TMacroDeclConst TMacroDecl TOPar argument_list TCPar teq initialize TPtVirg

 300  decl_spec2 : storage_class_spec
 301             | type_spec
 302             | type_qualif
 303             | Tinline
 304             | storage_class_spec decl_spec2
 305             | type_spec decl_spec2
 306             | type_qualif decl_spec2
 307             | Tinline decl_spec2

 308  storage_class_spec2 : Tstatic
 309                      | Textern
 310                      | Tauto
 311                      | Tregister
 312                      | Ttypedef

 313  storage_class_spec : storage_class_spec2
 314                     | storage_class_spec2 attribute_storage_list

 315  decl : decl2

 316  decl_spec : decl_spec2

 317  init_declarator2 : declaratori
 318                   | declaratori teq initialize
 319                   | declaratori TOParCplusplusInit argument_list TCPar

 320  teq : TEq

 321  init_declarator : init_declarator2

 322  declaratori : declarator
 323              | declarator gcc_asm_decl
 324              | attributes declarator
 325              | declarator attributes

 326  gcc_asm_decl : Tasm TOPar asmbody TCPar
 327               | Tasm Tvolatile TOPar asmbody TCPar

 328  initialize : assign_expr
 329             | tobrace_ini initialize_list gcc_comma_opt_struct tcbrace_ini
 330             | tobrace_ini tcbrace_ini

 331  initialize_list : initialize2
 332                  | initialize_list TComma initialize2

 333  initialize2 : cond_expr
 334              | tobrace_ini initialize_list gcc_comma_opt_struct tcbrace_ini
 335              | tobrace_ini tcbrace_ini
 336              | designator_list TEq initialize2
 337              | ident TDotDot initialize2

 338  designator : TDot ident
 339             | TOCro const_expr TCCro
 340             | TOCro const_expr TEllipsis const_expr TCCro

 341  gcc_comma_opt_struct : TComma
 342                       |

 343  s_or_u_spec2 : struct_or_union ident tobrace_struct struct_decl_list_gcc tcbrace_struct
 344               | struct_or_union tobrace_struct struct_decl_list_gcc tcbrace_struct
 345               | struct_or_union ident

 346  struct_or_union2 : Tstruct
 347                   | Tunion
 348                   | Tstruct attributes
 349                   | Tunion attributes

 350  struct_decl2 : field_declaration
 351               | TPtVirg
 352               | identifier TOPar argument_list TCPar TPtVirg
 353               | cpp_directive
 354               | cpp_ifdef_directive

 355  field_declaration : spec_qualif_list struct_declarator_list TPtVirg
 356                    | spec_qualif_list TPtVirg

 357  struct_declarator : declaratorsd
 358                    | dotdot const_expr2
 359                    | declaratorsd dotdot const_expr2

 360  declaratorsd : declarator
 361               | attributes declarator
 362               | declarator attributes

 363  struct_or_union_spec : s_or_u_spec2

 364  struct_or_union : struct_or_union2

 365  struct_decl : struct_decl2

 366  dotdot : TDotDot

 367  const_expr2 : const_expr

 368  struct_decl_list_gcc : struct_decl_list
 369                       |

 370  enum_spec : Tenum tobrace_enum enumerator_list gcc_comma_opt_struct tcbrace_enum
 371            | Tenum ident tobrace_enum enumerator_list gcc_comma_opt_struct tcbrace_enum
 372            | Tenum ident

 373  enumerator : idente
 374             | idente TEq const_expr

 375  idente : ident_cpp

 376  function_definition : function_def

 377  decl_list : decl
 378            | decl_list decl

 379  cpp_directive_list : cpp_directive
 380                     | cpp_directive_list cpp_directive

 381  function_def : start_fun compound
 382               | start_fun cpp_directive_list compound
 383               | start_fun decl_list compound

 384  start_fun : start_fun2

 385  start_fun2 : decl_spec declaratorfd
 386             | ctor_dtor

 387  ctor_dtor : Tconstructorname topar tcpar
 388            | Tconstructorname topar parameter_type_list tcpar

 389  declaratorfd : declarator
 390               | attributes declarator
 391               | declarator attributes

 392  cpp_directive : TIncludeStart TIncludeFilename
 393                | TDefine TIdentDefine define_val TDefEOL
 394                | TDefine TIdentDefine TOParDefine param_define_list TCPar define_val TDefEOL
 395                | TUndef TIdentDefine TDefEOL
 396                | TPragma TIdentDefine pragmainfo TDefEOL
 397                | TCppDirectiveOther

 398  pragmainfo : TOPar argument_list_ne TCPar
 399             | TOPar TCPar
 400             | ident_define_list_ne

 401  define_val : expr
 402             | statement
 403             | decl
 404             | decl_spec
 405             | decl_spec abstract_declarator
 406             | stat_or_decl stat_or_decl_list
 407             | function_definition
 408             | TOBraceDefineInit initialize_list gcc_comma_opt_struct TCBrace comma_opt
 409             | Tdo statement Twhile TOPar expr TCPar
 410             | Tasm TOPar asmbody TCPar
 411             | Tasm Tvolatile TOPar asmbody TCPar
 412             | TMacroAttr
 413             |

 414  param_define : TIdent
 415               | TypedefIdent
 416               | TDefParamVariadic
 417               | TEllipsis
 418               | Tregister

 419  cpp_ifdef_directive : TIfdef
 420                      | TIfdefelse
 421                      | TIfdefelif
 422                      | TEndif
 423                      | TIfdefBool
 424                      | TIfdefMisc
 425                      | TIfdefVersion

 426  cpp_other : identifier TOPar argument_list TCPar TPtVirg
 427            | identifier TOPar argument_list TCParEOL
 428            | identifier TPtVirg

 429  external_declaration : function_definition
 430                       | decl

 431  celem : Tnamespace TIdent TOBrace translation_unit TCBrace
 432        | external_declaration
 433        | cpp_directive
 434        | cpp_other
 435        | cpp_ifdef_directive
 436        | Tasm TOPar asmbody TCPar TPtVirg
 437        | TPtVirg
 438        | EOF

 439  tobrace : TOBrace

 440  tcbrace : TCBrace

 441  tobrace_enum : TOBrace

 442  tcbrace_enum : TCBrace

 443  tobrace_ini : TOBrace

 444  tcbrace_ini : TCBrace

 445  tobrace_struct : TOBrace

 446  tcbrace_struct : TCBrace

 447  topar : TOPar

 448  tcpar : TCPar

 449  string_list : string_elem
 450              | string_list string_elem

 451  colon_asm_list : colon_asm
 452                 | colon_asm_list colon_asm

 453  colon_option_list : colon_option
 454                    | colon_option_list TComma colon_option

 455  argument_list_ne : argument_ne
 456                   | argument_list_ne TComma argument

 457  argument_list : argument
 458                | argument_list TComma argument

 459  ident_define_list_ne : TIdentDefine
 460                       | ident_define_list_ne TIdentDefine

 461  struct_decl_list : struct_decl
 462                   | struct_decl_list struct_decl

 463  struct_declarator_list : struct_declarator
 464                         | struct_declarator_list TComma struct_declarator

 465  enumerator_list : enumerator
 466                  | enumerator_list TComma enumerator

 467  init_declarator_list : init_declarator
 468                       | init_declarator_list TComma init_declarator

 469  parameter_list : parameter_decl
 470                 | parameter_list TComma parameter_decl

 471  taction_list_ne : TAction
 472                  | TAction taction_list_ne

 473  taction_list :
 474               | TAction taction_list

 475  param_define_list :
 476                    | param_define
 477                    | param_define_list TComma param_define

 478  designator_list : designator
 479                  | designator_list designator

 480  attribute_list : attribute
 481                 | attribute_list attribute

 482  attribute_storage_list : attribute_storage
 483                         | attribute_storage_list attribute_storage

 484  attributes : attribute_list

 485  gcc_comma_opt : TComma
 486                |

 487  comma_opt : TComma
 488            |

 489  gcc_opt_expr : expr
 490               |

 491  %entry% : '\001' main
 492          | '\002' celem
 493          | '\003' statement
 494          | '\004' expr
 495          | '\005' type_name

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	'\004'  shift 4
	'\005'  shift 5
	.  error

	%entry%  goto 6


state 1
	%entry% : '\001' . main  (491)
	translation_unit : .  (2)

	.  reduce 2

	main  goto 7
	translation_unit  goto 8


state 2
	%entry% : '\002' . celem  (492)

	TIdent  shift 9
	Tconstructorname  shift 10
	TypedefIdent  shift 11
	TPtVirg  shift 12
	Tchar  shift 13
	Tshort  shift 14
	Tint  shift 15
	Tdouble  shift 16
	Tfloat  shift 17
	Tlong  shift 18
	Tunsigned  shift 19
	Tsigned  shift 20
	Tvoid  shift 21
	Tsize_t  shift 22
	Tssize_t  shift 23
	Tptrdiff_t  shift 24
	Tauto  shift 25
	Tregister  shift 26
	Textern  shift 27
	Tstatic  shift 28
	Ttypedef  shift 29
	Tconst  shift 30
	Tvolatile  shift 31
	Tstruct  shift 32
	Tunion  shift 33
	Tenum  shift 34
	Tdecimal  shift 35
	Tnamespace  shift 36
	Trestrict  shift 37
	Tasm  shift 38
	Tinline  shift 39
	Ttypeof  shift 40
	TDefine  shift 41
	TIncludeStart  shift 42
	TIfdef  shift 43
	TIfdefelse  shift 44
	TIfdefelif  shift 45
	TEndif  shift 46
	TIfdefBool  shift 47
	TIfdefMisc  shift 48
	TIfdefVersion  shift 49
	TUndef  shift 50
	TPragma  shift 51
	TCppDirectiveOther  shift 52
	TMacroDecl  shift 53
	EOF  shift 54
	.  error

	celem  goto 55
	external_declaration  goto 56
	identifier  goto 57
	type_spec  goto 58
	decl  goto 59
	function_definition  goto 60
	cpp_directive  goto 61
	cpp_ifdef_directive  goto 62
	type_spec2  goto 63
	struct_or_union_spec  goto 64
	enum_spec  goto 65
	type_qualif  goto 66
	decl_spec  goto 67
	decl2  goto 68
	decl_spec2  goto 69
	storage_class_spec  goto 70
	storage_class_spec2  goto 71
	s_or_u_spec2  goto 72
	struct_or_union  goto 73
	struct_or_union2  goto 74
	function_def  goto 75
	start_fun  goto 76
	start_fun2  goto 77
	ctor_dtor  goto 78
	cpp_other  goto 79


state 3
	%entry% : '\003' . statement  (493)

	TInt  shift 80
	TFloat  shift 81
	TChar  shift 82
	TString  shift 83
	TQuote  shift 84
	TDecimal  shift 85
	TIdent  shift 86
	TypedefIdent  shift 87
	TOPar  shift 88
	TOBrace  shift 89
	TInc  shift 90
	TDec  shift 91
	TTilde  shift 92
	TBang  shift 93
	TPtVirg  shift 94
	TAndLog  shift 95
	TAnd  shift 96
	TPlus  shift 97
	TMinus  shift 98
	TMul  shift 99
	Texec  shift 100
	Tbreak  shift 101
	Tswitch  shift 102
	Tcase  shift 103
	Tcontinue  shift 104
	Tfor  shift 105
	Tdo  shift 106
	Tif  shift 107
	Twhile  shift 108
	Treturn  shift 109
	Tgoto  shift 110
	Tdefault  shift 111
	Tsizeof  shift 112
	Tnew  shift 113
	Tdelete  shift 114
	Tasm  shift 115
	TCppConcatOp  shift 116
	TMacroStmt  shift 117
	TMacroIdentBuilder  shift 118
	TMacroString  shift 119
	TMacroIterator  shift 120
	.  error

	statement  goto 121
	expr  goto 122
	identifier_cpp  goto 123
	ident_extra_cpp  goto 124
	ident_cpp  goto 125
	assign_expr  goto 126
	cond_expr  goto 127
	cast_expr  goto 128
	arith_expr  goto 129
	unary_expr  goto 130
	topar2  goto 131
	postfix_expr  goto 132
	unary_op  goto 133
	primary_expr  goto 134
	string_elem  goto 135
	compound  goto 136
	statement2  goto 137
	labeled  goto 138
	expr_statement  goto 139
	selection  goto 140
	iteration  goto 141
	jump  goto 142
	tobrace  goto 143


state 4
	%entry% : '\004' . expr  (494)

	TInt  shift 80
	TFloat  shift 81
	TChar  shift 82
	TString  shift 83
	TQuote  shift 84
	TDecimal  shift 85
	TIdent  shift 144
	TOPar  shift 88
	TInc  shift 90
	TDec  shift 91
	TTilde  shift 92
	TBang  shift 93
	TAndLog  shift 95
	TAnd  shift 96
	TPlus  shift 97
	TMinus  shift 98
	TMul  shift 99
	Tsizeof  shift 112
	Tnew  shift 113
	Tdelete  shift 114
	TCppConcatOp  shift 116
	TMacroIdentBuilder  shift 118
	TMacroString  shift 119
	.  error

	expr  goto 145
	identifier_cpp  goto 123
	ident_extra_cpp  goto 146
	assign_expr  goto 126
	cond_expr  goto 127
	cast_expr  goto 128
	arith_expr  goto 129
	unary_expr  goto 130
	topar2  goto 131
	postfix_expr  goto 132
	unary_op  goto 133
	primary_expr  goto 134
	string_elem  goto 135


state 5
	%entry% : '\005' . type_name  (495)

	TypedefIdent  shift 11
	Tchar  shift 13
	Tshort  shift 14
	Tint  shift 15
	Tdouble  shift 16
	Tfloat  shift 17
	Tlong  shift 18
	Tunsigned  shift 19
	Tsigned  shift 20
	Tvoid  shift 21
	Tsize_t  shift 22
	Tssize_t  shift 23
	Tptrdiff_t  shift 24
	Tconst  shift 30
	Tvolatile  shift 31
	Tstruct  shift 32
	Tunion  shift 33
	Tenum  shift 34
	Tdecimal  shift 35
	Trestrict  shift 37
	Ttypeof  shift 40
	.  error

	type_name  goto 147
	type_spec  goto 148
	type_spec2  goto 63
	struct_or_union_spec  goto 64
	enum_spec  goto 65
	type_qualif  goto 149
	spec_qualif_list2  goto 150
	spec_qualif_list  goto 151
	s_or_u_spec2  goto 72
	struct_or_union  goto 73
	struct_or_union2  goto 74


state 6
	$accept : %entry% . $end  (0)

	$end  accept


state 7
	%entry% : '\001' main .  (491)

	.  reduce 491


state 8
	main : translation_unit . EOF  (1)
	translation_unit : translation_unit . external_declaration  (3)
	translation_unit : translation_unit . Tnamespace TIdent TOBrace translation_unit TCBrace  (4)

	Tconstructorname  shift 10
	TypedefIdent  shift 11
	Tchar  shift 13
	Tshort  shift 14
	Tint  shift 15
	Tdouble  shift 16
	Tfloat  shift 17
	Tlong  shift 18
	Tunsigned  shift 19
	Tsigned  shift 20
	Tvoid  shift 21
	Tsize_t  shift 22
	Tssize_t  shift 23
	Tptrdiff_t  shift 24
	Tauto  shift 25
	Tregister  shift 26
	Textern  shift 27
	Tstatic  shift 28
	Ttypedef  shift 29
	Tconst  shift 30
	Tvolatile  shift 31
	Tstruct  shift 32
	Tunion  shift 33
	Tenum  shift 34
	Tdecimal  shift 35
	Tnamespace  shift 152
	Trestrict  shift 37
	Tinline  shift 39
	Ttypeof  shift 40
	TMacroDecl  shift 53
	EOF  shift 153
	.  error

	external_declaration  goto 154
	type_spec  goto 58
	decl  goto 59
	function_definition  goto 60
	type_spec2  goto 63
	struct_or_union_spec  goto 64
	enum_spec  goto 65
	type_qualif  goto 66
	decl_spec  goto 67
	decl2  goto 68
	decl_spec2  goto 69
	storage_class_spec  goto 70
	storage_class_spec2  goto 71
	s_or_u_spec2  goto 72
	struct_or_union  goto 73
	struct_or_union2  goto 74
	function_def  goto 75
	start_fun  goto 76
	start_fun2  goto 77
	ctor_dtor  goto 78


state 9
	identifier : TIdent .  (7)

	.  reduce 7


state 10
	ctor_dtor : Tconstructorname . topar tcpar  (387)
	ctor_dtor : Tconstructorname . topar parameter_type_list tcpar  (388)

	TOPar  shift 155
	.  error

	topar  goto 156


state 11
	type_spec2 : TypedefIdent .  (228)

	.  reduce 228


state 12
	celem : TPtVirg .  (437)

	.  reduce 437


state 13
	type_spec2 : Tchar .  (213)

	.  reduce 213


state 14
	type_spec2 : Tshort .  (220)

	.  reduce 220


state 15
	type_spec2 : Tint .  (214)

	.  reduce 214


state 16
	type_spec2 : Tdouble .  (216)

	.  reduce 216


state 17
	type_spec2 : Tfloat .  (215)

	.  reduce 215


state 18
	type_spec2 : Tlong .  (221)

	.  reduce 221


state 19
	type_spec2 : Tunsigned .  (223)

	.  reduce 223


state 20
	type_spec2 : Tsigned .  (222)

	.  reduce 222


state 21
	type_spec2 : Tvoid .  (212)

	.  reduce 212


state 22
	type_spec2 : Tsize_t .  (217)

	.  reduce 217


state 23
	type_spec2 : Tssize_t .  (218)

	.  reduce 218


state 24
	type_spec2 : Tptrdiff_t .  (219)

	.  reduce 219


state 25
	storage_class_spec2 : Tauto .  (310)

	.  reduce 310


state 26
	storage_class_spec2 : Tregister .  (311)

	.  reduce 311


state 27
	storage_class_spec2 : Textern .  (309)

	.  reduce 309


state 28
	decl2 : Tstatic . TMacroDecl TOPar argument_list TCPar TPtVirg  (295)
	decl2 : Tstatic . TMacroDeclConst TMacroDecl TOPar argument_list TCPar TPtVirg  (296)
	decl2 : Tstatic . TMacroDecl TOPar argument_list TCPar teq initialize TPtVirg  (298)
	decl2 : Tstatic . TMacroDeclConst TMacroDecl TOPar argument_list TCPar teq initialize TPtVirg  (299)
	storage_class_spec2 : Tstatic .  (308)

	TMacroDecl  shift 157
	TMacroDeclConst  shift 158
	TIdent  reduce 308
	TypedefIdent  reduce 308
	TOPar  reduce 308
	TOCro  reduce 308
	TPtVirg  reduce 308
	TAnd  reduce 308
	TMul  reduce 308
	Tchar  reduce 308
	Tshort  reduce 308
	Tint  reduce 308
	Tdouble  reduce 308
	Tfloat  reduce 308
	Tlong  reduce 308
	Tunsigned  reduce 308
	Tsigned  reduce 308
	Tvoid  reduce 308
	Tsize_t  reduce 308
	Tssize_t  reduce 308
	Tptrdiff_t  reduce 308
	Tauto  reduce 308
	Tregister  reduce 308
	Textern  reduce 308
	Tstatic  reduce 308
	Ttypedef  reduce 308
	Tconst  reduce 308
	Tvolatile  reduce 308
	Tstruct  reduce 308
	Tunion  reduce 308
	Tenum  reduce 308
	Tdecimal  reduce 308
	Trestrict  reduce 308
	Tattribute  reduce 308
	Tinline  reduce 308
	Ttypeof  reduce 308
	TCppConcatOp  reduce 308
	TDefEOL  reduce 308
	TMacroAttr  reduce 308
	TMacroIdentBuilder  reduce 308
	TMacroAttrStorage  reduce 308


state 29
	storage_class_spec2 : Ttypedef .  (312)

	.  reduce 312


state 30
	type_qualif : Tconst .  (232)

	.  reduce 232


state 31
	type_qualif : Tvolatile .  (233)

	.  reduce 233


state 32
	struct_or_union2 : Tstruct .  (346)
	struct_or_union2 : Tstruct . attributes  (348)

	Tattribute  shift 159
	TMacroAttr  shift 160
	TIdent  reduce 346
	TypedefIdent  reduce 346
	TOBrace  reduce 346

	attribute  goto 161
	attributes  goto 162
	attribute_list  goto 163

